fix padding and spacing

--- a/extension/src/popup/components/Onboarding/styles.scss
+++ b/extension/src/popup/components/Onboarding/styles.scss
@@ -1,6 +1,7 @@
 .Onboarding {
   margin: 4.5rem auto 0;
   max-width: var(--fullscreen--max-width);
+  width: 100%;
 
   &--back {
     margin-bottom: -1.3rem;
