--- a/extension/src/popup/views/Preferences/styles.scss
+++ b/extension/src/popup/views/Preferences/styles.scss
@@ -1,5 +1,6 @@
 .Preferences {
   font-size: 0.875rem;
+  padding: var(--popup-vertical-padding) var(--popup--side-padding);
 
   &--section {
     display: flex;
@@ -15,6 +16,7 @@
   }
   &--label {
     cursor: pointer;
+    margin: 0;
     text-transform: none;
   }
 
@@ -38,6 +40,7 @@
   }
 
   &--toggle {
+    align-items: self-start;
     display: flex;
     justify-content: space-between;
 
